--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 
 h1, h2 {
     font-family: 'Oswald', sans-serif;
+    color: darkblue !important; /* Ensure headings are DarkBlue */
 }
 
 img {
@@ -14,25 +15,8 @@ img {
     margin-right: 10px;
 }
 
-nav {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: DarkBlue;
-    font-weight: bold;
+a.nav-link {
+    color: white !important;
 }
 
 .columns {
@@ -42,4 +26,8 @@ nav ul li a {
 
 .column {
     width: 300px;
+}
+
+.content {
+    margin-top: 60px; /* Adjust for fixed navbar */
 }
